 - [DEV-262] added group filtering  for "Trigger info" (Artem)
 - [DEV-259] added internal links (Artem)
 - [DEV-251] added improved screen editing (Artem)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.2

 - [ZBX-639] fixed numeric snmp oid for ifOutOctets. Thanks to Alexandr Kovalenko. (Sasha)
 - [DEV-268] added support of net.tcp.listen under FreeBSD (Sasha)
 - [ZBX-651] fixed possible memory leak in autodiscovery actions (Sasha)
 - [DEV-268] added support of system.boottime under Solaris (Sasha)
 - [DEV-268] added support of system.cpu.load under Solaris 2.6 (Sasha)
 - [ZBX-650] DM: fixed memory leak in synchronization of node configuration (Sasha)
 - [ZBX-650] fixed rare race condition in DBimplode_exp (Sasha)
 - [ZBX-650] fixed cleanup of open file descriptor (Sasha)
 - [ZBX-649] fixed problem with "Too many open files" by agent under Solaris and AIX (Sasha)
 - [DEV-268] added support of system.swap.size under FreeBSD (Sasha)
 - [DEV-276] added support of HTML text in plaintext view in screens (Artem)
 - [ZBX-395] fixed item list for simple graph (Artem)
 - [ZBX-334] added sorting to group list in elements copy form (Artem)
 - [ZBX-509] fixed problem with user rights to hostgroup without any host (Artem)
 - [ZBX-564] added more descriptive message on conflict of templates (Artem)
 - [ZBX-443] removed excess space after detail messages (Artem)
 - [ZBX-526] fixed graphs on screens not getting refreshed issue (Artem)
 - [ZBX-531] fixed plain text line wrapping (Artem)
 - [ZBX-551] updated german language file (Artem)
 - [ZBX-554] added proxy host info in export/import (Artem)
 - [ZBX-638] fixed deleting applications on host remove (Artem)
 - [ZBX-636] removed "Keep trends (in days)" from Item Configuration form if "Type of information" is Character, Log or Text (Artem)